buggy overflow

--- a/app/assets/stylesheets/mobile/auth.scss
+++ b/app/assets/stylesheets/mobile/auth.scss
@@ -1,6 +1,6 @@
 header.auth_header {
 	#logo {
-		height: 30px;
+		height: 35px;
     background-size: 40%;
     margin-top: 5px;
 	}
